# igata

./: .gitignore  CLAUDE.md  Cargo.build-spec.json  Cargo.toml  LICENSE  flake.nix  rust-analyzer.toml
module/: default.nix  lib.nix
src/: build.rs  config.rs  context.rs  defaults.rs  display.rs  engine.rs  error.rs  inspect.rs  interpolation.rs  lib.rs  main.rs  manifest.rs  syntax.rs  template.rs  traits.rs  validate.rs  variable.rs
src/builder/: amazon_ebs.rs  docker.rs  mod.rs  null.rs  qemu.rs
src/communicator/: docker.rs  mod.rs  none.rs  ssh.rs
src/post_processor/: checksum.rs  compress.rs  manifest.rs  mod.rs  shell_local.rs
src/provisioner/: breakpoint.rs  file.rs  mod.rs  shell.rs  shell_local.rs
tests/: engine_tests.rs  trait_tests.rs
